--- a/index.html
+++ b/index.html
@@ -1,64 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "ImageGallery",
-        "name": "Galerie photos",
-        "description": "Liste de mes photos avec leur catégories",
-        "url": "https://nina-carducci.antoinelrk.com",
-        "image": [
-          "https://nina-carducci.antoinelrk.com/assets/aaron-paul-wnX-fXzB6Cw-unsplash.jpg",
-          "https://nina-carducci.antoinelrk.com/assets/ali-morshedlou-WMD64tMfc4k-unsplash.jpg",
-          "https://nina-carducci.antoinelrk.com/assets/jason-goodman-tHO1_OuKbg0-unsplash.jpg",
-          "https://nina-carducci.antoinelrk.com/assets/hannah-busing-RvF2R_qMpRk-unsplash.jpg",
-          "https://nina-carducci.antoinelrk.com/assets/ade-tunji-rVkhWWZFAtQ-unsplash.jpg",
-          "https://nina-carducci.antoinelrk.com/assets/jakob-owens-SiniLJkXhMc-unsplash.jpg",
-          "https://nina-carducci.antoinelrk.com/assets/nino-van-prattenburg--443cl1uR_8-unsplash.jpg",
-          "https://nina-carducci.antoinelrk.com/assets/austin-neill-hgO1wFPXl3I-unsplash.jpg",
-          "https://nina-carducci.antoinelrk.com/assets/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
-        ]
-      }
-    </script>
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "NinaCarducci",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "68 Avenue Alsace-Lorraine",
-          "addressLocality": "Bordeaux",
-          "addressRegion": "Nouvelle-Aquitaine",
-          "postalCode": "32000",
-          "addressCountry": "FR"
-        }
-      }
-    </script>
-    <script type="application/ld+json">
-      {
-        "@context":"https://schema.org",
-        "@type":"ItemList",
-        "itemListElement":[
-          {
-            "@type":"ListItem",
-            "position":1,
-            "url":"https://nina-carducci.antoinelrk.com/assets/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
-          },
-          {
-            "@type":"ListItem",
-            "position":2,
-            "url":"https://nina-carducci.antoinelrk.com/assets/nicholas-green-nPz8akkUmDI-unsplash.jpg"
-          },
-          {
-            "@type":"ListItem",
-            "position":3,
-            "url":"https://nina-carducci.antoinelrk.com/assets/edward-cisneros-3_h6-1NPDGw-unsplash.jpg"
-          }
-        ]
-      }
-    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="geo.position" content="44.846585410079214;-0.6065363294477583">
@@ -89,6 +31,70 @@
     
     <script type="module" crossorigin src="/assets/index.js"></script>
     <link rel="stylesheet" href="/assets/index.css">
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ImageGallery",
+        "name": "Galerie photos",
+        "description": "Liste de mes photos avec leur catégories",
+        "url": "https://nina-carducci.antoinelrk.com",
+        "image": [
+          "https://nina-carducci.antoinelrk.com/assets/aaron-paul-wnX-fXzB6Cw-unsplash.webp",
+          "https://nina-carducci.antoinelrk.com/assets/ali-morshedlou-WMD64tMfc4k-unsplash.webp",
+          "https://nina-carducci.antoinelrk.com/assets/jason-goodman-tHO1_OuKbg0-unsplash.webp",
+          "https://nina-carducci.antoinelrk.com/assets/hannah-busing-RvF2R_qMpRk-unsplash.webp",
+          "https://nina-carducci.antoinelrk.com/assets/ade-tunji-rVkhWWZFAtQ-unsplash.webp",
+          "https://nina-carducci.antoinelrk.com/assets/jakob-owens-SiniLJkXhMc-unsplash.webp",
+          "https://nina-carducci.antoinelrk.com/assets/nino-van-prattenburg--443cl1uR_8-unsplash.webp",
+          "https://nina-carducci.antoinelrk.com/assets/austin-neill-hgO1wFPXl3I-unsplash.webp",
+          "https://nina-carducci.antoinelrk.com/assets/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+        ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "NinaCarducci",
+        "telephone": "+33556677889",
+        "priceRange": "$",
+        "image": [
+          "https://nina-carducci.antoinelrk.com/assets/camera.webp",
+          "https://nina-carducci.antoinelrk.com/assets/portrait-of-nina-carducci.webp"
+        ],
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "68 Avenue Alsace-Lorraine",
+          "addressLocality": "Bordeaux",
+          "addressRegion": "Nouvelle-Aquitaine",
+          "postalCode": "32000",
+          "addressCountry": "FR"
+        }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context":"https://schema.org",
+        "@type":"ItemList",
+        "itemListElement":[
+          {
+            "@type":"ListItem",
+            "position":1,
+            "url":"https://nina-carducci.antoinelrk.com/assets/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
+          },
+          {
+            "@type":"ListItem",
+            "position":2,
+            "url":"https://nina-carducci.antoinelrk.com/assets/nicholas-green-nPz8akkUmDI-unsplash.webp"
+          },
+          {
+            "@type":"ListItem",
+            "position":3,
+            "url":"https://nina-carducci.antoinelrk.com/assets/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <header>
@@ -134,9 +140,9 @@
 
       <section class="carousel">
         <ul class="images-list">
-          <li class="image"><img src="/assets/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" alt="Homme d'affaire qui marche sur un passage pour piéton"></li>
-          <li class="image"><img src="/assets/nicholas-green-nPz8akkUmDI-unsplash.jpg" alt="Deux homme s'amusent à un concert de musique"></li>
-          <li class="image"><img src="/assets/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" alt="Un homme embrasse une femme en la cambrant, a leur mariage"></li>
+          <li class="image"><img src="/assets/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" alt="Homme d'affaire qui marche sur un passage pour piéton"></li>
+          <li class="image"><img src="/assets/nicholas-green-nPz8akkUmDI-unsplash.webp" alt="Deux homme s'amusent à un concert de musique"></li>
+          <li class="image"><img src="/assets/edward-cisneros-3_h6-1NPDGw-unsplash.webp" alt="Un homme embrasse une femme en la cambrant, a leur mariage"></li>
         </ul>
         <div class="control">
           <button class="carousel-control" id="prev-button" aria-label="Slide précedente">
@@ -173,15 +179,15 @@
         <section class="gallery-container">
           <!-- Le JS génère le filtre ici -->
           <ul class="gallery-items">
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Concert" src="/assets/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Entreprises" src="/assets/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Entreprises" src="/assets/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Mariages" src="/assets/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Portrait" src="/assets/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Mariages" src="/assets/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Portrait" src="/assets/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Concert" src="/assets/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Entreprises" src="/assets/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt=""/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Concert" src="/assets/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt=""/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Entreprises" src="/assets/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt=""/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Entreprises" src="/assets/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt=""/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Mariages" src="/assets/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt=""/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Portrait" src="/assets/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt=""/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Mariages" src="/assets/jakob-owens-SiniLJkXhMc-unsplash.webp" alt=""/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Portrait" src="/assets/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt=""/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Concert" src="/assets/austin-neill-hgO1wFPXl3I-unsplash.webp" alt=""/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Entreprises" src="/assets/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt=""/></li>
           </ul>
         </section>
       </section>
