Fix alt attributes errors on w3c

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
       <h1 class="name">Nina Carducci</h1>
       <nav>
         <ul>
-          <li><a href="#about-me" alt="Voir la catégorie A propos" aria-label="Voir la catégorie A propos">À propos</a></li>
-          <li><a href="#gallery" alt="Voir la catégorie Galerie" aria-label="Voir la catégorie Galerie">Galerie</a></li>
-          <li><a href="#services" alt="Voir la catégorie Services" aria-label="Voir la catégorie Services">Services</a></li>
-          <li><a href="#contact" alt="Voir la catégorie Contact" aria-label="Voir la catégorie Contact">Contact</a></li>
+          <li><a href="#about-me" aria-label="Voir la catégorie A propos">À propos</a></li>
+          <li><a href="#gallery" aria-label="Voir la catégorie Galerie">Galerie</a></li>
+          <li><a href="#services" aria-label="Voir la catégorie Services">Services</a></li>
+          <li><a href="#contact" aria-label="Voir la catégorie Contact">Contact</a></li>
           <li>
-            <a class="social-link" aria-label="Se rendre sur le profil Instagram de Nina Carducci dans un nouvel onglet" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" alt="Se rendre sur le profil Instagram de Nina Carducci dans un nouvel onglet">
+            <a class="social-link" aria-label="Se rendre sur le profil Instagram de Nina Carducci dans un nouvel onglet" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank">
               <figure class="social-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 448 512">
                   <path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path>
@@ -127,7 +127,7 @@
               </svg>
             </figure>
           </button>
-          <img class="viewimg" src="" alt="">
+          <img class="viewimg">
           <button class="next" aria-label="Photo suivante">
             <figure>
               <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 512 512">
@@ -179,15 +179,15 @@
         <section class="gallery-container">
           <!-- Le JS génère le filtre ici -->
           <ul class="gallery-items">
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Concert" src="/assets/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Entreprises" src="/assets/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Entreprises" src="/assets/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Mariages" src="/assets/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Portrait" src="/assets/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Mariages" src="/assets/jakob-owens-SiniLJkXhMc-unsplash.webp" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Portrait" src="/assets/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Concert" src="/assets/austin-neill-hgO1wFPXl3I-unsplash.webp" alt=""/></li>
-            <li class="gallery-item-li"><img class="gallery-item" data-category="Entreprises" src="/assets/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt=""/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Concert" src="/assets/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Groupe de personnes qui s'amusent en levant les bras lors d'un concert"/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Entreprises" src="/assets/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Homme d'affaire en costume les bras croisés"/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Entreprises" src="/assets/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Femme souriante lors d'une réunion d'entreprise"/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Mariages" src="/assets/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Les mains d'un homme et une femme qui se touchent du bout des doigts"/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Portrait" src="/assets/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Homme noir fermant les yeux comme ébloui par le soleil"/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Mariages" src="/assets/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Une couple, marie et femme se regardant souriant lors de leur mariage"/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Portrait" src="/assets/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une femme se touchant les cheveux avec la main droite"/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Concert" src="/assets/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Chanteur d'un groupe de musique levant la main lors d'un concert"/></li>
+            <li class="gallery-item-li"><img class="gallery-item" data-category="Entreprises" src="/assets/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Femme souriante devant son ordinateur"/></li>
           </ul>
         </section>
       </section>
